[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
glam = "0.30.8"
log = "0.4.28"
pollster = "0.4.0"
wgpu = "27.0.1"
env_logger = "0.11.8"
crossbeam = "0.8.4"
flume = "0.11.1"
cgmath = "0.18.0"

[dependencies.image]
version = "0.25.8"
default-features = false
features = ["png", "jpeg"]
